--- a/language/en-GB/en-GB.mod_phocacart_search.ini
+++ b/language/en-GB/en-GB.mod_phocacart_search.ini
@@ -9,6 +9,10 @@
 ; @test utf-8 ä, ö, ü
 ;
 
+
+;[3.2.0]
+MOD_PHOCACART_SEARCH_FIELD_PLACEHOLDER_TEXT_LABEL="Placeholder Text"
+MOD_PHOCACART_SEARCH_FIELD_PLACEHOLDER_TEXT_DESC="Set placeholder text. E.g.: 'COM_PHOCACART_SEARCH_FOR' which will be translated to 'Search for'."
 ;[3.1.0]
 MOD_PHOCACART_SEARCH_FIELD_HIDE_BUTTONS_LABEL="Hide Buttons"
 MOD_PHOCACART_SEARCH_FIELD_HIDE_BUTTONS_DESC="Display or hide input buttons"
