--- a/language/en-GB/en-GB.mod_phocacart_search.ini
+++ b/language/en-GB/en-GB.mod_phocacart_search.ini
@@ -10,6 +10,9 @@
 ;
 
 
+;[3.5.0]
+MOD_PHOCACART_SEARCH_FIELD_DISPLAY_ACTIVE_PARAMETERS_LABEL="Display Active Parameters"
+MOD_PHOCACART_SEARCH_FIELD_DISPLAY_ACTIVE_PARAMETERS_DESC="Display or hide active parameters"
 ;[3.2.0]
 MOD_PHOCACART_SEARCH_FIELD_PLACEHOLDER_TEXT_LABEL="Placeholder Text"
 MOD_PHOCACART_SEARCH_FIELD_PLACEHOLDER_TEXT_DESC="Set placeholder text. E.g.: 'COM_PHOCACART_SEARCH_FOR' which will be translated to 'Search for'."
